--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
 <head>
-  <title>HTML Form Elements</title>
+  <title>Lab 3</title>
   <meta charset="utf-8" />
-  <meta name="viewport" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=none" />
+  <link rel="stylesheet" media="screen" href="css/reset.css" />
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
 <body>
 <main id="content">
   <form method="get" action="#null">
-    <h1>Secret Diabetes Newsletter</h1>
-    <p>
-      Sign up and learn 5 secrets to fight Diabetes!
-    </p>
-    <ol>
-      <li id="input-email">
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" pattern="^.+@.+$" />
-      </li>
-      <li id="input-age-verification">
-        <input type="checkbox" id="age-verification" name="age-verification" value="18" />
-        <label for="age-verification">I am over 18 years old</label>
-      </li>
-      <li id="input-submit">
-        <input type="submit" name="submit" id="submit" value="Subscribe" />
-      </li>
-    </ol>
+    <h1>Please fill out form below:</h1>
+    <fieldset>
+      <div><p>
+        <label for="first_name_field">First Name:</label>
+        <input type="text" id="first_name_field" name="first_name_field">
+      </p></div>
+      <div><p>
+        <label for="last_name_field">Last Name:</label>
+        <input type="text" id="last_name_field" name="last_name_field">
+      </p></div>
+      <div><p>
+        <label for="phone_field">Phone Number:</label>
+        <input type="number" id="phone_field" name="phone_field">
+      </p></div>
+      <div><p>
+        <label for="email_field">Email Adress:</label>
+        <input type="text" id="email_field" name="email_field">
+      </p></div>
+      <div><p>
+        <label for="date_of_birth_field">Date Of Bitrh:</label>
+        <input type="date" id="date_of_birth_field" name="date_of_birth_field">
+      </p></div>
+    </fieldset>
+    <p id=submit><input type="submit" value="Submit"></p>
   </form>
 </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
