--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <input type="date" id="date_of_birth_field" name="date_of_birth_field">
       </p></div>
     </fieldset>
-    <p id=submit><input type="submit" value="Submit"></p>
+    <p class=submit><input type="submit" value="Submit"></p>
   </form>
 </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
