--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input type="text" id="email_field" name="email_field">
       </p></div>
       <div><p>
-        <label for="date_of_birth_field">Date Of Bitrh:</label>
+        <label for="date_of_birth_field">Date of Bitrh:</label>
         <input type="date" id="date_of_birth_field" name="date_of_birth_field">
       </p></div>
     </fieldset>
